--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ doc/HTML/Makefile.in
 doc/Makefile.in
 install-sh
 missing
+doc/man/Makefile.in
+doc/refentry/Makefile.in
+sgml-iso-entities/Makefile.in
+xml-iso-entities/Makefile.in
