--- a/config/sgml.conf
+++ b/config/sgml.conf
@@ -1,3 +1,3 @@
 # /etc/sgml/sgml.conf conformant with LSB
-SGML_BASE_DIR=/usr/share/sgml
-SGML_CATALOGS_DIR=/etc/sgml
+SGML_BASE_DIR=/@unixroot/usr/share/sgml
+SGML_CATALOGS_DIR=/@unixroot/etc/sgml
